--- a/Client/app/src/main/res/layout/fragment_a.xml
+++ b/Client/app/src/main/res/layout/fragment_a.xml
@@ -33,6 +33,11 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <ListView
+            android:id="@+id/roomListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></ListView>
+
     </LinearLayout>
 
 </LinearLayout>
