--- a/Client/app/src/main/res/layout/tab0_message_layout.xml
+++ b/Client/app/src/main/res/layout/tab0_message_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/status"
@@ -17,14 +17,14 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/titleMessage"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="제목: "/>
+                android:text="제목: " />
 
             <TextView
                 android:id="@+id/titleContentMessage"
