--- a/Client/app/src/main/res/layout/tab2_myroom.xml
+++ b/Client/app/src/main/res/layout/tab2_myroom.xml
@@ -4,11 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="100dp"
-        android:text="Tab3" />
+    <ListView
+        android:id="@+id/myroomListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </ListView>
 
 </LinearLayout>
