--- a/Client/app/src/main/res/layout/tab0_message_layout.xml
+++ b/Client/app/src/main/res/layout/tab0_message_layout.xml
@@ -4,59 +4,61 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/status"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <TextView
+            android:id="@+id/message_title"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="전산과 모여라~" />
+
+    </HorizontalScrollView>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/message_from"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:gravity="center_vertical"
+            android:text="rongrong" />
 
-            <TextView
-                android:id="@+id/titleMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="제목: " />
-
-            <TextView
-                android:id="@+id/titleContentMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/message_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="horizontal">
+            android:gravity="center_vertical"
+            android:text="님이 가입요청을 보내셨습니다." />
 
-            <TextView
-                android:id="@+id/makerMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="방장: " />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/makerContentMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/currentStateMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
+        <Button
+            android:id="@+id/accept"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="승인" />
 
-
-        </LinearLayout>
+        <Button
+            android:id="@+id/reject"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="거부" />
 
     </LinearLayout>
 
