--- a/Client/app/src/main/res/layout/tab0_roomlist_layout.xml
+++ b/Client/app/src/main/res/layout/tab0_roomlist_layout.xml
@@ -5,46 +5,82 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:text="제목: " />
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="제목: "
+            android:textAlignment="center"/>
 
-        <TextView
-            android:id="@+id/titleContent"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+        <HorizontalScrollView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="4">
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="전산과 모여라~"/>
+
+        </HorizontalScrollView>
+
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/maker"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:text="방장: " />
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="유형: "
+            android:textAlignment="center"/>
 
         <TextView
-            android:id="@+id/makerContent"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+            android:id="@+id/mealType"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="상관없음"/>
 
         <TextView
-            android:id="@+id/currentState"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="방장: "
+            android:textAlignment="center"/>
 
+        <TextView
+            android:id="@+id/makerId"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="rongrong"/>
+
+        <TextView
+            android:id="@+id/current"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="3/4"
+            android:textAlignment="center"/>
 
     </LinearLayout>
 
