--- a/Client/app/src/main/res/layout/tab0_roomlist_layout.xml
+++ b/Client/app/src/main/res/layout/tab0_roomlist_layout.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="100dp"
+    android:orientation="vertical"
+    android:descendantFocusability="blocksDescendants">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,19 +19,22 @@
             android:text="제목: "
             android:textAlignment="center"/>
 
-        <HorizontalScrollView
+        <TextView
+            android:id="@+id/title"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="4">
+            android:layout_weight="4"
+            android:gravity="center_vertical"
+            android:text="전산과 모여라~"/>
 
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:text="전산과 모여라~"/>
 
-        </HorizontalScrollView>
+        <!--<HorizontalScrollView-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="4">-->
+
+            <!---->
+        <!--</HorizontalScrollView>-->
 
 
     </LinearLayout>
