[Client] add swipe functionality in fragmentA

--- a/Client/app/src/main/res/layout/tab1_roomlist.xml
+++ b/Client/app/src/main/res/layout/tab1_roomlist.xml
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:drawableLeft="@android:drawable/ic_menu_search" />
 
-    <LinearLayout
+    <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/showRoom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -50,6 +50,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-    </LinearLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
