--- a/Client/app/src/main/res/layout/tab1_roomlist.xml
+++ b/Client/app/src/main/res/layout/tab1_roomlist.xml
@@ -11,33 +11,35 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/firstFastSearch"
+            android:id="@+id/departmentSearch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Department"
-            android:textAllCaps="false"/>
+            android:text="학과로 검색"
+            android:textAllCaps="false" />
 
         <Button
-            android:id="@+id/secondFastSearch"
+            android:id="@+id/mealTypeSearch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="mealType"
-            android:textAllCaps="false"/>
+            android:text="유형으로 검색"
+            android:textAllCaps="false" />
 
         <Button
             android:id="@+id/fastSearchAdd"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:text="+"
-            android:textAllCaps="false"/>
+            android:textAllCaps="false" />
 
     </LinearLayout>
 
     <EditText
-        android:id="@+id/searchBar"
+        android:id="@+id/searchRoom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableLeft="@android:drawable/ic_menu_search" />
+        android:drawableLeft="@android:drawable/ic_menu_search"
+        android:drawableRight="@android:drawable/ic_delete"
+        android:maxLines="1" />
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/showRoom"
