--- a/Client/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Client/app/src/main/res/menu/activity_main_drawer.xml
@@ -23,13 +23,14 @@
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
                 android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:icon="@android:drawable/ic_menu_edit"
+                android:title="개인정보 수정" />
+            <item
+                android:id="@+id/nav_share"
+                android:icon="@android:drawable/ic_lock_idle_lock"
+                android:title="로그아웃" />
+
         </menu>
     </item>
 
