--- a/Client/app/src/main/res/values/array.xml
+++ b/Client/app/src/main/res/values/array.xml
@@ -1,36 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string-array name="department">
-        <item>물리학과</item>
-        <item>수리과학과</item>
-        <item>화학과</item>
-        <item>나노과학기술대학원</item>
-        <item>생명과학과</item>
-        <item>의과학대학원</item>
-        <item>전산학부</item>
-        <item>정보통신공학과</item>
-        <item>조천식녹색교통대학원</item>
-        <item>전기및전자공학부</item>
+        <item>EEWS 대학원</item>
         <item>건설및환경공학과</item>
+        <item>경영공학부</item>
+        <item>과학기술정책대학원</item>
+        <item>금융전문대학원</item>
+        <item>기계공학과</item>
+        <item>기술경영학부</item>
+        <item>나노과학기술대학원</item>
+        <item>녹색성장대학원</item>
+        <item>문술미래전략대학원</item>
+        <item>문화기술대학원</item>
+        <item>물리학과</item>
         <item>바이오및뇌공학과</item>
         <item>산업디자인학과</item>
         <item>산업및시스템공학과</item>
+        <item>생명과학과</item>
         <item>생명화학공학과</item>
-        <item>원자력및양자공학과</item>
-        <item>EEWS 대학원</item>
+        <item>수리과학과</item>
         <item>신소재공학과</item>
-        <item>기계공학과</item>
-        <item>항공우주공학과</item>
+        <item>원자력및양자공학과</item>
+        <item>의과학대학원</item>
         <item>인문사회과학부</item>
-        <item>문화기술대학원</item>
-        <item>문술미래전략대학원</item>
-        <item>과학기술정책대학원</item>
-        <item>경영공학부</item>
-        <item>기술경영학부</item>
-        <item>테크노경영대학원</item>
-        <item>금융전문대학원</item>
+        <item>전기및전자공학부</item>
+        <item>전산학부</item>
         <item>정보미디어경영대학원</item>
-        <item>녹색성장대학원</item>
-
+        <item>정보통신공학과</item>
+        <item>조천식녹색교통대학원</item>
+        <item>테크노경영대학원</item>
+        <item>항공우주공학과</item>
+        <item>화학과</item>
     </string-array>
+
+    <string-array name="mealType">
+        <item>상관없음</item>
+        <item>식사</item>
+        <item>카페</item>
+        <item>술</item>
+    </string-array>
+
 </resources>
