--- a/Client/app/src/main/res/layout/sign_layout.xml
+++ b/Client/app/src/main/res/layout/sign_layout.xml
@@ -62,6 +62,14 @@
             android:background="#40e0d0"
             android:text="회원가입"/>
 
+        <Button
+            android:id="@+id/backToLogin"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_marginTop="10dp"
+            android:background="#558A84"
+            android:text="로그인 화면으로 돌아가기"/>
+
     </LinearLayout>
 
 
