[Client] navigation view and modify my info

--- a/Client/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Client/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
-    </group>
-
-    <item android:title="Communicate">
+    <item android:title="내 정보">
         <menu>
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/id_show"
+                android:title="개인정보 수정" />
+            <item
+                android:id="@+id/department_show"
+                android:title="로그아웃" />
+            <item
+                android:id="@+id/circle_show"
+                android:title="로그아웃" />
+            <item
+                android:id="@+id/hobby_show"
+                android:title="로그아웃" />
+
+        </menu>
+    </item>
+
+    <item android:title="계정관리">
+        <menu>
+            <item
+                android:id="@+id/edit"
                 android:icon="@android:drawable/ic_menu_edit"
                 android:title="개인정보 수정" />
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/logout"
                 android:icon="@android:drawable/ic_lock_idle_lock"
                 android:title="로그아웃" />
 
