--- a/Client/app/src/main/res/layout/tab2_myroom.xml
+++ b/Client/app/src/main/res/layout/tab2_myroom.xml
@@ -4,17 +4,25 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/showRoom"
+    <EditText
+        android:id="@+id/searchMyRoom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@android:drawable/ic_menu_search"
+        android:drawableRight="@android:drawable/ic_delete"
+        android:maxLines="1" />
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/showMyRoom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ListView
-            android:id="@+id/roomlistListView"
+            android:id="@+id/myroomlistListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-    </LinearLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
