--- a/Client/app/src/main/res/layout/sign_modify.xml
+++ b/Client/app/src/main/res/layout/sign_modify.xml
@@ -14,29 +14,11 @@
             android:text="아이디:"
             android:gravity="center"/>
 
-        <EditText
+        <TextView
             android:id="@+id/id_modify"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="10"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:text="비밀번호:"
-            android:gravity="center"/>
-
-        <EditText
-            android:id="@+id/pw_modify"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:gravity="center|left"
             android:layout_weight="10"/>
 
     </LinearLayout>
