--- a/Client/app/src/main/res/values/array.xml
+++ b/Client/app/src/main/res/values/array.xml
@@ -41,4 +41,19 @@
         <item>술</item>
     </string-array>
 
+    <array name="username_colors">
+        <item>@color/username0</item>
+        <item>@color/username1</item>
+        <item>@color/username2</item>
+        <item>@color/username3</item>
+        <item>@color/username4</item>
+        <item>@color/username5</item>
+        <item>@color/username6</item>
+        <item>@color/username7</item>
+        <item>@color/username8</item>
+        <item>@color/username9</item>
+        <item>@color/username10</item>
+        <item>@color/username11</item>
+    </array>
+
 </resources>
