--- a/Client/app/src/main/res/layout/tab1_roomlist.xml
+++ b/Client/app/src/main/res/layout/tab1_roomlist.xml
@@ -15,26 +15,42 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/departmentSearch"
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="학과로 검색"
-                android:textAllCaps="false" />
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:padding="3dp">
 
-            <Button
-                android:id="@+id/mealTypeSearch"
+                <Button
+                    android:id="@+id/departmentSearch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="학과로 검색"
+                    android:background="@color/colorBrighy"
+                    android:textColor="@color/colorAccent"
+                    android:textAllCaps="false"/>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="유형으로 검색"
-                android:textAllCaps="false" />
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:padding="3dp">
 
-            <Button
-                android:id="@+id/fastSearchAdd"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:text="+"
-                android:textAllCaps="false" />
+                <Button
+                    android:id="@+id/mealTypeSearch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="유형으로 검색"
+                    android:background="@color/colorBrighy"
+                    android:textColor="@color/colorAccent"
+                    android:textAllCaps="false" />
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
