--- a/Client/app/src/main/res/layout/make_new_room.xml
+++ b/Client/app/src/main/res/layout/make_new_room.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:gravity="center">
 
     <TextView
         android:layout_width="match_parent"
@@ -38,16 +39,34 @@
         android:hint="최대 인원을 입력하세요"
         android:inputType="number"/>
 
-    <Button
-        android:id="@+id/makeNewRoomConfirm"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="방 만들기"/>
+        android:padding="3dp">
 
-    <Button
-        android:id="@+id/makeNewRoomCancel"
+        <Button
+            android:id="@+id/makeNewRoomConfirm"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:background="@color/colorBrighy"
+            android:textColor="@color/colorAccent"
+            android:text="방 만들기"/>
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="취소"/>
+        android:padding="3dp">
+
+        <Button
+            android:id="@+id/makeNewRoomCancel"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:background="@color/colorBrighy"
+            android:textColor="@color/colorAccent"
+            android:text="취소"/>
+
+    </LinearLayout>
 
 </LinearLayout>
