--- a/Client/app/src/main/res/layout/sign_layout.xml
+++ b/Client/app/src/main/res/layout/sign_layout.xml
@@ -1,76 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_gravity="center">
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="100dp"></LinearLayout>
+    <EditText
+        android:id="@+id/id"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginRight="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_gravity="center_horizontal|center_vertical">
+        android:hint="아이디" />
 
-        <EditText
-            android:id="@+id/id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="아이디" />
-
-        <Button
-            android:id="@+id/duplicate"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:background="@color/colorAccent"
-            android:text="중복 확인" />
+    <Button
+        android:id="@+id/duplicate"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="@color/colorBrighy"
+        android:text="중복 확인" />
 
 
-        <EditText
-            android:id="@+id/pw"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="비밀번호" />
+    <EditText
+        android:id="@+id/pw"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="비밀번호" />
 
-        <Spinner
-            android:id="@+id/departmentselect"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <Spinner
+        android:id="@+id/departmentselect"
+        android:layout_width="match_parent"
+        android:layout_height="35dp">
 
-        </Spinner>
+    </Spinner>
 
 
-        <EditText
-            android:id="@+id/circleselect"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="동아리"
-            android:inputType="textMultiLine"
-            android:scrollbars="vertical"/>
+    <EditText
+        android:id="@+id/circleselect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="동아리"
+        android:inputType="textMultiLine"
+        android:scrollbars="vertical"/>
 
-        <EditText
-            android:id="@+id/hobbyselect"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="취미 혹은 하고 싶은 말"
-            android:inputType="textMultiLine"
-            android:scrollbars="vertical"/>
+    <EditText
+        android:id="@+id/hobbyselect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="취미 혹은 하고 싶은 말"
+        android:inputType="textMultiLine"
+        android:scrollbars="vertical"/>
 
-        <Button
-            android:id="@+id/press"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:background="@color/colorAccent"
-            android:text="회원가입"/>
+    <Button
+        android:id="@+id/press"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="@color/colorBrighy"
+        android:text="회원가입"/>
 
-        <Button
-            android:id="@+id/backToLogin"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/colorAccent"
-            android:text="로그인 화면으로 돌아가기"/>
+    <Button
+        android:id="@+id/backToLogin"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/colorBrighy"
+        android:text="로그인 화면으로 돌아가기"/>
 
-    </LinearLayout>
 
 
     <TextView
