--- a/Client/app/src/main/res/layout/tab0_message_accept_layout.xml
+++ b/Client/app/src/main/res/layout/tab0_message_accept_layout.xml
@@ -2,15 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="match_parent"
-        android:src="@drawable/ic_sentiment_satisfied_black_24dp"/>
+    android:layout_height="60dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_marginRight="0dp"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
@@ -51,8 +47,15 @@
 
         </LinearLayout>
 
+
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="30dp"
+        android:layout_height="match_parent"
+        android:layout_marginRight="10dp"
+        android:src="@drawable/ic_sentiment_satisfied_black_24dp" />
 
 
 </LinearLayout>
