--- a/Client/app/src/main/res/layout/tab0_message_layout.xml
+++ b/Client/app/src/main/res/layout/tab0_message_layout.xml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="60dp"
     android:orientation="horizontal">
 
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="match_parent"
-        android:src="@drawable/ic_thumb_up_black_24dp"/>
-
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <HorizontalScrollView
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="0dp"
             android:layout_weight="1">
 
@@ -51,27 +46,20 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/accept"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="승인" />
-
-            <Button
-                android:id="@+id/reject"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="거부" />
-
-        </LinearLayout>
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/accept"
+        android:layout_width="24dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_thumb_up_black_24dp" />
+
+    <Button
+        android:id="@+id/reject"
+        android:layout_width="24dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_thumb_down_black_24dp" />
+
 
 </LinearLayout>
