--- a/Client/app/src/main/res/layout/tab2_myroom.xml
+++ b/Client/app/src/main/res/layout/tab2_myroom.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableLeft="@android:drawable/ic_menu_search"
-        android:drawableRight="@android:drawable/ic_delete"
+        android:drawableRight="@drawable/ic_clear_black_24dp"
         android:maxLines="1" />
 
     <android.support.v4.widget.SwipeRefreshLayout
