--- a/Client/app/src/main/res/layout/tab0_message_accept_layout.xml
+++ b/Client/app/src/main/res/layout/tab0_message_accept_layout.xml
@@ -5,7 +5,7 @@
     android:layout_height="60dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="320dp"
         android:layout_marginRight="0dp"
         android:layout_height="match_parent"
         android:orientation="vertical">
