--- a/Client/app/src/main/res/layout/login_layout.xml
+++ b/Client/app/src/main/res/layout/login_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/main_login_layout"
@@ -11,10 +11,9 @@
         android:layout_gravity="center"
         android:layout_marginBottom="150dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="150dp"
         android:layout_marginRight="50dp"
-        android:orientation="vertical"
-        >
+        android:layout_marginTop="150dp"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,8 +23,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:gravity="center"
                 android:text="MEMBER LOGIN"
-                android:gravity="center"/>
+                android:textSize="16sp" />
 
         </LinearLayout>
 
@@ -38,14 +38,14 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_person_black_24dp"/>
+                android:src="@drawable/ic_person_black_24dp" />
 
             <EditText
                 android:id="@+id/enterId"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Username"
-                android:textColorHint="#a9a9a9"/>
+                android:textColorHint="#a9a9a9" />
 
         </LinearLayout>
 
@@ -58,50 +58,52 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_lock_outline_black_24dp"/>
+                android:src="@drawable/ic_lock_outline_black_24dp" />
+
             <EditText
                 android:id="@+id/enterPW"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Password"
-                android:textColorHint="#a9a9a9"/>
+                android:inputType="textPassword"
+                android:textColorHint="#a9a9a9" />
 
         </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="10dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="3dp">
+            android:paddingLeft="3dp"
+            android:paddingRight="3dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="7dp">
 
             <Button
                 android:id="@+id/login"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:background="@color/colorBrighy"
-                android:textColor="@color/colorAccent"
-                android:text="로그인"/>
+                android:text="로그인"
+                android:textColor="@color/colorAccent" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="3dp">
+            android:paddingLeft="3dp"
+            android:paddingRight="3dp"
+            android:layout_marginBottom="3dp">
 
             <Button
                 android:id="@+id/sign"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:background="@color/colorBrighy"
-                android:textColor="@color/colorAccent"
-                android:text="회원가입" />
+                android:text="회원가입"
+                android:textColor="@color/colorAccent" />
 
         </LinearLayout>
-
 
     </LinearLayout>
 
