--- a/Client/app/src/main/res/layout/make_new_room.xml
+++ b/Client/app/src/main/res/layout/make_new_room.xml
@@ -3,41 +3,52 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center">
+    android:paddingLeft="30dp"
+    android:paddingRight="30dp"
+    android:paddingTop="50dp">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="방 제목" />
+        android:text="방 제목"
+        android:textColor="#000000"
+        android:textSize="18dp" />
 
     <EditText
         android:id="@+id/makeNewRoomTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:hint="방 제목을 입력하세요" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="방 유형" />
+              android:text="방 유형"
+        android:textColor="#000000"
+        android:textSize="18dp" />
 
     <Spinner
         android:id="@+id/makeNewRoomMealType"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginBottom="20dp"
         android:entries="@array/mealType" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="최대 인원" />
+        android:text="최대 인원"
+        android:textColor="#000000"
+        android:textSize="18dp" />
 
     <EditText
         android:id="@+id/makeNewRoomMaxUser"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginBottom="20dp"
         android:hint="최대 인원을 입력하세요"
-        android:inputType="number"/>
+        android:inputType="number" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -46,26 +57,25 @@
 
         <Button
             android:id="@+id/makeNewRoomConfirm"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_weight="1"
             android:background="@color/colorBrighy"
-            android:textColor="@color/colorAccent"
-            android:text="방 만들기"/>
+            android:text="방 만들기"
+            android:textColor="@color/colorAccent" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="3dp">
+        <TextView
+            android:layout_width="15dp"
+            android:layout_height="match_parent" />
 
         <Button
             android:id="@+id/makeNewRoomCancel"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_weight="1"
             android:background="@color/colorBrighy"
-            android:textColor="@color/colorAccent"
-            android:text="취소"/>
+            android:text="취소"
+            android:textColor="@color/colorAccent" />
 
     </LinearLayout>
 
