--- a/Client/app/src/main/res/layout/room_info.xml
+++ b/Client/app/src/main/res/layout/room_info.xml
@@ -6,7 +6,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
         <TextView
@@ -14,7 +15,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="제목: "
+            android:text="제목 : "
             android:textAlignment="center" />
 
         <TextView
@@ -29,7 +30,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="10dp"
         android:orientation="horizontal">
 
         <TextView
@@ -37,7 +39,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="유형: "
+            android:text="유형 : "
             android:textAlignment="center" />
 
         <TextView
@@ -53,7 +55,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="방장: "
+            android:text="방장 : "
             android:textAlignment="center" />
 
         <TextView
@@ -117,25 +119,22 @@
 
             <Button
                 android:id="@+id/sendRequest"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
+                android:layout_width="0dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
                 android:background="@color/colorBrighy"
                 android:textColor="@color/colorAccent"
                 android:text="가입요청"/>
 
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="3dp">
+            <TextView
+                android:layout_width="7dp"
+                android:layout_height="match_parent" />
 
             <Button
                 android:id="@+id/btnReturn"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
+                android:layout_width="0dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
                 android:background="@color/colorBrighy"
                 android:text="목록보기"
                 android:textColor="@color/colorAccent" />
