--- a/Client/app/src/main/res/layout/sign_layout.xml
+++ b/Client/app/src/main/res/layout/sign_layout.xml
@@ -1,81 +1,193 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center">
+
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"></LinearLayout>
-    <EditText
-        android:id="@+id/id"
+        android:id="@+id/main_login_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="아이디" />
+        android:layout_gravity="center"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="70dp"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/duplicate"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:background="@color/colorBrighy"
-        android:text="중복 확인" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="MEMBER SIGN UP"
+                android:textSize="16sp" />
 
-    <EditText
-        android:id="@+id/pw"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="비밀번호" />
+        </LinearLayout>
 
-    <Spinner
-        android:id="@+id/departmentselect"
-        android:layout_width="match_parent"
-        android:layout_height="35dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
 
-    </Spinner>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/ic_person_black_24dp" />
 
+            <EditText
+                android:id="@+id/id"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:hint="Username"
+                android:textColorHint="#a9a9a9" />
 
-    <EditText
-        android:id="@+id/circleselect"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="동아리"
-        android:inputType="textMultiLine"
-        android:scrollbars="vertical"/>
+            <Button
+                android:id="@+id/duplicate"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_gravity="center_vertical"
+                android:background="@color/colorBrighy"
+                android:text="중복 확인" />
 
-    <EditText
-        android:id="@+id/hobbyselect"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="취미 혹은 하고 싶은 말"
-        android:inputType="textMultiLine"
-        android:scrollbars="vertical"/>
-
-    <Button
-        android:id="@+id/press"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:background="@color/colorBrighy"
-        android:text="회원가입"/>
-
-    <Button
-        android:id="@+id/backToLogin"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_marginTop="10dp"
-        android:background="@color/colorBrighy"
-        android:text="로그인 화면으로 돌아가기"/>
+        </LinearLayout>
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/hiden"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/ic_lock_outline_black_24dp" />
 
-    <TextView
-        android:id="@+id/hiden2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+            <EditText
+                android:id="@+id/pw"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:textColorHint="#a9a9a9" />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/ic_school_black_24dp" />
+
+            <Spinner
+                android:id="@+id/departmentselect"
+                android:layout_width="match_parent"
+                android:layout_height="35dp">
+
+            </Spinner>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/ic_thumb_up_black_24dp" />
+
+            <EditText
+                android:id="@+id/circleselect"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:hint="동아리/취미"
+                android:inputType="textMultiLine"
+                android:scrollbars="vertical" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/ic_chat_black_24dp" />
+
+            <EditText
+                android:id="@+id/hobbyselect"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="기타"
+                android:inputType="textMultiLine"
+                android:scrollbars="vertical" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="7dp"
+            android:layout_marginTop="10dp"
+            android:paddingLeft="3dp"
+            android:paddingRight="3dp">
+
+            <Button
+                android:id="@+id/press"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+
+                android:background="@color/colorBrighy"
+
+                android:text="회원가입" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="3dp"
+            android:paddingLeft="3dp"
+            android:paddingRight="3dp">
+
+            <Button
+                android:id="@+id/backToLogin"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:background="@color/colorBrighy"
+                android:text="로그인 화면으로 돌아가기" />
+
+        </LinearLayout>
+
+
+        <TextView
+            android:id="@+id/hiden"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TextView
+            android:id="@+id/hiden2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
 </LinearLayout>
