--- a/Client/app/src/main/res/layout/sign_modify.xml
+++ b/Client/app/src/main/res/layout/sign_modify.xml
@@ -1,46 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingTop="20dp"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="60dp"
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="아이디:"
-            android:gravity="center"/>
+            android:layout_marginRight="10dp"
+            android:src="@drawable/ic_person_black_24dp" />
 
         <TextView
             android:id="@+id/id_modify"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center|left"
-            android:layout_weight="10"/>
+            android:gravity="center_vertical"
+            android:textSize="18sp"/>
 
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="60dp"
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="학과:"
-            android:gravity="center"/>
+            android:layout_marginRight="5dp"
+            android:src="@drawable/ic_school_black_24dp" />
 
         <Spinner
             android:id="@+id/departmentselect_modify"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="10.00">
-        </Spinner>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
     </LinearLayout>
 
@@ -49,19 +50,18 @@
         android:layout_height="40dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="60dp"
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="동아리:"
-            android:gravity="center"/>
+            android:layout_marginRight="5dp"
+            android:src="@drawable/ic_thumb_up_black_24dp" />
 
         <EditText
             android:id="@+id/circle_modify"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
-            android:scrollbars="vertical"
-            android:layout_weight="10"/>
+            android:scrollbars="vertical" />
 
     </LinearLayout>
 
@@ -70,32 +70,29 @@
         android:layout_height="40dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="60dp"
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="취미:"
-            android:gravity="center"/>
+            android:layout_marginRight="5dp"
+            android:src="@drawable/ic_chat_black_24dp" />
 
         <EditText
             android:id="@+id/hobbyselect_modify"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
-            android:scrollbars="vertical"/>
+            android:scrollbars="vertical" />
 
     </LinearLayout>
-
-
 
     <TextView
         android:id="@+id/hiden3"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
     <TextView
         android:id="@+id/hiden4"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
+        android:layout_height="match_parent" />
 
 </LinearLayout>
