--- a/Client/app/src/main/res/layout/tab1_roomlist.xml
+++ b/Client/app/src/main/res/layout/tab1_roomlist.xml
@@ -7,6 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="7dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -15,42 +16,31 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:padding="3dp">
-
                 <Button
                     android:id="@+id/departmentSearch"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
                     android:layout_weight="1"
+                    android:layout_marginLeft="7dp"
                     android:text="학과로 검색"
                     android:background="@color/colorBrighy"
                     android:textColor="@color/colorAccent"
                     android:textAllCaps="false"/>
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:padding="3dp">
+                <TextView
+                    android:layout_width="7dp"
+                    android:layout_height="match_parent" />
 
                 <Button
                     android:id="@+id/mealTypeSearch"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
                     android:layout_weight="1"
+                    android:layout_marginRight="7dp"
                     android:text="유형으로 검색"
                     android:background="@color/colorBrighy"
                     android:textColor="@color/colorAccent"
                     android:textAllCaps="false" />
-
-            </LinearLayout>
-
 
         </LinearLayout>
 
@@ -71,7 +61,7 @@
             <ListView
                 android:id="@+id/roomlistListView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"/>
 
         </android.support.v4.widget.SwipeRefreshLayout>
 
