--- a/Client/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Client/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,11 +20,11 @@
         <menu>
             <item
                 android:id="@+id/edit"
-                android:icon="@android:drawable/ic_menu_edit"
+                android:icon="@drawable/ic_edit_black_24dp"
                 android:title="개인정보 수정" />
             <item
                 android:id="@+id/logout"
-                android:icon="@android:drawable/ic_lock_idle_lock"
+                android:icon="@drawable/ic_lock_open_black_24dp"
                 android:title="로그아웃" />
 
         </menu>
